crates/nash-report/tests/can/snapshots/can__kinds__phantom_parameter_defaults_to_type_before_higher_kinded_use.snap
---
source: crates/nash-report/tests/can/kinds.rs
assertion_line: 881
description: "module Main exposing (..)\n\nimport Builtin exposing (..)\n\ntype tag 'a = Tag\ntype option 'a = Some 'a\ntype app 'f 'a = App ('f 'a)\ntype w = W (app tag (app option))\n"
info: diagnostic
---
nash::names::kind_mismatch

  × Kind mismatch in field 1 of little constructor `W` in `w`.
   ╭─[src/Main.nash:8:22]
 7 │ type app 'f 'a = App ('f 'a)
 8 │ type w = W (app tag (app option))
   ·                      ──────────
   ╰────
  help: Expected kind `Type`, found `Type -> Type`.
