crates/nash-report/tests/can/snapshots/can__kinds__phantom_use_cannot_hide_an_infinite_declaration_kind.snap
---
source: crates/nash-report/tests/can/kinds.rs
assertion_line: 849
description: "module Main exposing (..)\n\nimport Builtin exposing (..)\n\ntype self 'f = Self ('f 'f)\ntype tag 'a = Tag\ntype w = W (tag (self self))\n"
info: diagnostic
---
nash::names::kind_infinite

  × This application in field 1 of little constructor `Self` in `self` would require
  │ an infinite kind:
   ╭─[src/Main.nash:5:25]
 4 │ 
 5 │ type self 'f = Self ('f 'f)
   ·                         ──
 6 │ type tag 'a = Tag
   ╰────
  help: Check the type application and the kinds of its arguments.
