crates/nash-report/tests/can/snapshots/can__kinds__recursive_fix_infers_a_higher_kinded_parameter.snap
---
source: crates/nash-report/tests/can/kinds.rs
assertion_line: 611
description: "module Main exposing (..)\n\nimport Builtin exposing (..)\n\ntype Fix 'f = Fix ('f (Fix 'f))\n"
---
(
    [
        (
            "Fix",
            Arrow(
                Arrow(
                    Type,
                    Type,
                ),
                Type,
            ),
            [
                Apply {
                    head: Located {
                        region: Region {
                            start: Position {
                                line: 5,
                                column: 20,
                            },
                            end: Position {
                                line: 5,
                                column: 22,
                            },
                        },
                        value: Var(
                            "f",
                        ),
                    },
                    args: [
                        Located {
                            region: Region {
                                start: Position {
                                    line: 5,
                                    column: 24,
                                },
                                end: Position {
                                    line: 5,
                                    column: 30,
                                },
                            },
                            value: Named {
                                reference: QualifiedName {
                                    home: ModuleName {
                                        package: None,
                                        name: "Main",
                                    },
                                    name: "Fix",
                                },
                                args: [
                                    Located {
                                        region: Region {
                                            start: Position {
                                                line: 5,
                                                column: 28,
                                            },
                                            end: Position {
                                                line: 5,
                                                column: 30,
                                            },
                                        },
                                        value: Var(
                                            "f",
                                        ),
                                    },
                                ],
                            },
                        },
                    ],
                },
                Implied {
                    trait_: QualifiedName {
                        home: ModuleName {
                            package: Some(
                                PackageName {
                                    author: "nash",
                                    project: "core",
                                },
                            ),
                            name: "Builtin",
                        },
                        name: "Big",
                    },
                    args: [
                        Located {
                            region: Region {
                                start: Position {
                                    line: 5,
                                    column: 20,
                                },
                                end: Position {
                                    line: 5,
                                    column: 31,
                                },
                            },
                            value: App {
                                head: Located {
                                    region: Region {
                                        start: Position {
                                            line: 5,
                                            column: 20,
                                        },
                                        end: Position {
                                            line: 5,
                                            column: 22,
                                        },
                                    },
                                    value: Var(
                                        "f",
                                    ),
                                },
                                args: [
                                    Located {
                                        region: Region {
                                            start: Position {
                                                line: 5,
                                                column: 24,
                                            },
                                            end: Position {
                                                line: 5,
                                                column: 30,
                                            },
                                        },
                                        value: Named {
                                            reference: QualifiedName {
                                                home: ModuleName {
                                                    package: None,
                                                    name: "Main",
                                                },
                                                name: "Fix",
                                            },
                                            args: [
                                                Located {
                                                    region: Region {
                                                        start: Position {
                                                            line: 5,
                                                            column: 28,
                                                        },
                                                        end: Position {
                                                            line: 5,
                                                            column: 30,
                                                        },
                                                    },
                                                    value: Var(
                                                        "f",
                                                    ),
                                                },
                                            ],
                                        },
                                    },
                                ],
                            },
                        },
                    ],
                },
            ],
        ),
    ],
    [],
)
