crates/nash-report/tests/can/snapshots/can__kinds__representation_annotation_requires_a_type_kinded_parameter.snap
---
source: crates/nash-report/tests/can/kinds.rs
assertion_line: 629
description: "module Main exposing (..)\n\nimport Builtin exposing (..)\n\ntype wrap ('f : Big) 'a = Wrap ('f 'a)\n"
info: diagnostic
---
nash::names::kind_mismatch

  × Kind mismatch in the type annotation.
   ╭─[src/Main.nash:5:12]
 4 │ 
 5 │ type wrap ('f : Big) 'a = Wrap ('f 'a)
   ·            ──
   ╰────
  help: Expected kind `Type`, found `Type -> Type`.
