crates/nash-report/tests/can/snapshots/can__kinds__self_application_and_independent_alias_error_are_reported.snap
---
source: crates/nash-report/tests/can/kinds.rs
assertion_line: 773
description: "module Main exposing (..)\n\nimport Builtin exposing (..)\n\ntype tag 'a = Tag\ntype s 'f 'g 'a = S ('g ('f 'f 'a))\ntype w = W (s s s)\ntype alias Count = int\n"
info: diagnostic
---
nash::names::kind_infinite

  × This application in field 1 of little constructor `S` in `s` would require an
  │ infinite kind:
   ╭─[src/Main.nash:6:29]
 5 │ type tag 'a = Tag
 6 │ type s 'f 'g 'a = S ('g ('f 'f 'a))
   ·                             ──
 7 │ type w = W (s s s)
   ╰────
  help: Check the type application and the kinds of its arguments.

nash::names::representation_mismatch

  × This position requires `Big` in the uppercase name of alias `Count`:
   ╭─[src/Main.nash:8:20]
 7 │ type w = W (s s s)
 8 │ type alias Count = int
   ·                    ───
   ╰────
  help: The type has `Const` representation, but `Big` admits only Big types. Change the
        type or the representation requirement.
