crates/nash-report/tests/can/snapshots/can__kinds__self_application_case_03.snap
---
source: crates/nash-report/tests/can/kinds.rs
assertion_line: 814
description: "module Main exposing (..)\ntype tag 'a = Tag\ntype s 'f 'g 'a = S ('g ('f 'f 'a))\ntype w = W (s s tag tag)"
info: diagnostic
---
nash::names::kind_infinite

  × This application in field 1 of little constructor `S` in `s` would require an
  │ infinite kind:
   ╭─[src/Main.nash:3:29]
 2 │ type tag 'a = Tag
 3 │ type s 'f 'g 'a = S ('g ('f 'f 'a))
   ·                             ──
 4 │ type w = W (s s tag tag)
   ╰────
  help: Check the type application and the kinds of its arguments.
